# simple-nn

./: .gitattributes  .gitignore  CMakeLists.txt
cmake/: Utils.cmake  simple-base.cmake  simple-lib.cmake
include/: c_api.h
samples/: CMakeLists.txt  sample_nn.cc
samples/models/: linear_512_1000.pnnx.param  squeezenet_v1.1.param  yolov5s_batch8.pnnx.param
scripts/: build_linux_x86.sh
src/: config.h.in  infer.cc  infer.h  infer_qnn.cc  infer_qnn.h
src/loader/: model_load.cc  model_load.h
src/runtime/: blob.cc  blob.h  layer.cc  layer.h  layer_register.h  net.cc  net.h  net_option.h  scheduler.h
src/runtime/layer/: linear.cc  linear.h  source.cc  source.h
src/runtime/pnnx/: ir.cc  ir.h  store_zip.cc  store_zip.h
src/utils/: state.h
src/wrapper/: qnn_wrapper.cc  qnn_wrapper.h  wrapper.h
src/wrapper/utils/: qnn_utils.h
tests/: CMakeLists.txt  simple_cv_gtest.cc
tests/utils/: test_util.cc  test_util.h
