PROJECT(simple.nn_test)

SET(TARGET_NAME simple_nn_gtest)

FILE(GLOB_RECURSE util_sources 
    ${CMAKE_CURRENT_SOURCE_DIR}/utils/*.cc 
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
LIST(APPEND test_sources ${util_sources})

ADD_EXECUTABLE(${TARGET_NAME}
    ${test_sources}
)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/utils/
    ${GTEST_INCLUDE_DIR}
    ${CMAKE_INSTALL_PREFIX}/simple.nn/include
)

TARGET_LINK_LIBRARIES(${TARGET_NAME}
    ${SIMPLE_NN_LIBS}
    ${THIRD_PARTY_LIBS}
    ${GTEST_LIBRARIES}
    ${CMAKE_DL_LIBS}
)

# INSTALL(DIRECTORY data DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
INSTALL(TARGETS ${TARGET_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
